# tui-command-bar-widget

./: Cargo.toml  README.md  i18n.toml  test_plan.md
config/: tui-command-bar-widget.toml
examples/: popup.rs  user_input.rs
src/: lib.rs
src/key_hook/: key_hook.rs  mod.rs
src/widgets/: command_bar.rs  mod.rs  popup.rs
tests/: command_bar_render.rs
